--- a/internship.html
+++ b/internship.html
@@ -6,6 +6,7 @@
             <h2>BHUVANESWARAN S</h2>
             <h3></h3>
             <h3><b> Degree: </b>B.Tech Information technology</h3>
+            <h3> I finished my school </h3>
 
         </body>
     </head>
