--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <input type="date" placeholder="DD/MM/YYYY " />
             </form>
             <button onclick="submit()">Submit</button> 
+            <h3>BYE!!!<h3>
             <script src="script.js" />
         </body>
 </html>
